<resources>
    <string name="app_name">Facilino</string>
    <string name="version_code">1.3.2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="facebook_app_id">1210344942386164</string>

    <string name="title_activity_shop">Buy license</string>
    <string name="title_activity_about_description">A block programming tool for Arduino</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_language">Language</string>
    <string name="pref_language_description">Select your language</string>
    <string-array name="pref_language_titles">
        <item>Català</item>
        <item>Dansk</item>
		<item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Español (latino)</item>
        <item>Euskera</item>
        <item>Français</item>
        <item>Galego</item>
        <item>Italiano</item>
        <item>Nederlands</item>
        <item>Portuges</item>
        <item>Norsk</item>
		<item>Polski</item>
        <item>&#x420;&#x443;&#x441;&#x441;&#x43a;&#x438;&#x439;</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>ca-ES</item>
        <item>da-DK</item>
        <item>de-DE</item>
        <item>en-GB</item>
        <item>es-ES</item>
        <item>lt-ES</item>
        <item>eu-ES</item>
        <item>fr-FR</item>
        <item>gl-ES</item>
        <item>it-IT</item>
        <item>pt-PT</item>
        <item>nl-NL</item>
        <item>nb-NO</item>
        <item>pl-PL</item>
        <item>ru-RU</item>
    </string-array>

    <string name="pref_processor">Processor</string>
    <string name="pref_processor_description">Select target processor</string>
    <string-array name="pref_processor_titles">
        <item>Arduino Nano</item>
        <item>Arduino Uno</item>
        <item>NodeMCU</item>
        <item>R32 (ESP32)</item>
    </string-array>
    <string-array name="pref_processor_values">
        <item>ArduinoNano</item>
        <item>ArduinoUno</item>
        <item>NodeMCU</item>
        <item>ESP32</item>
    </string-array>

    <string name="pref_license">License</string>
    <string name="pref_license_description">Introduce your license to activate more features</string>

    <string name="pref_title_license_key">License Key</string>
    <string name="pref_title_license_default_value"></string>

    <!-- About -->
    <string name="about_title_social">Social</string>
    <string name="about_title_general">General</string>
    <string name="about_title_acknowledgements">Acknowledgements</string>

    <string name="action_new">New</string>
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_arduino">Arduino</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_myblocks">MyBlocks</string>
    <string name="action_translate">Translate</string>
    <string name="action_back">Back</string>
    <string name="empty"></string>

    <!-- Strings for new programm -->
    <string name="new_title">Start a new program&#8230;</string>
    <string name="new_are_you_sure">Are you sure?</string>
    <string name="new_yes">Yes</string>
    <string name="new_no">No</string>
    <string name="open_failed">Fail to open</string>
    <string name="open_success">File successfully opened</string>

    <string name="toast_file_saved">File saved:</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_layout">Layout</string>

    <string name="pref_tools_code">Show code</string>
    <string name="pref_tools_doc">Show documentation</string>
    <string name="pref_tools_code_summary">Toggle to show/hide code generation</string>
    <string name="pref_tools_doc_summary">Toggle to show/hide documentation</string>

    <!-- Javascript and webview result -->
    <string name="loading">Loading</string>
    <string name="prompt_title">Introduce new value:</string>


    <!-- License -->
    <string name="demo_version">This App is in demo version mode, advanced features will not generate code without the license.</string>
    <string name="doc_missing">Documentation is only available in English, sorry!</string>
    <string name="checking_license">Checking license</string>
    <string name="license_active">License active</string>
    <string name="license_not_active">License could not be validated. Please, check your internet connection or contact soporte@roboticafacil.es if the problem persists</string>
    <string name="internet_connection">No internet connection</string>
    <string name="pref_code_doc_title">Layout</string>
    <string name="pref_show_code">Show code</string>
    <string name="pref_show_doc">Show documentation</string>
    <string name="pref_show_code_summary">Show/hide code generation</string>
    <string name="pref_show_doc_summary">Show/hide documentation</string>
    <string name="action_zoom_out">zoom out</string>
    <string name="action_zoom_in">zoom in</string>
    <string name="title_activity_multiplatform">Multiplatform</string>
    <string name="multiplatform_title_windows">Windows</string>
    <string name="multiplatform_title_ubuntu">Ubuntu</string>
    <string name="multiplatform_title_macOS">macOS</string>
    <string name="multiplatform_title_web">Web</string>
    <string name="multiplatform_title_android">Android</string>

    <!-- OnBoard Screen. -->
    <string name="ob_header1">Create Amazing Arduino Projects</string>
    <string name="ob_header2">Multiplatform</string>
    <string name="ob_header3">Supports multiple boards</string>
    <string name="ob_header4">Instruction set</string>
    <string name="ob_header5">Languages</string>
    <string name="ob_header6">Code Generation/Upload</string>
    <string name="ob_header7">Documentation</string>
    <string name="ob_header8">License</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_skip">SKIP</string>
    <string name="ob_desc1">Facilino is a block programming tool to generate Arduino Code</string>
    <string name="ob_desc2">Available in Windows, Ubuntu, macOS, Android and Web with 100% code compatibility</string>
    <string name="ob_desc3">Arduino Uno, Arduino Nano, NodeMCU, ESP32, etc...</string>
    <string name="ob_desc4">A wide variety of instructions for all kind of projects</string>
    <string name="ob_desc5">Instructions have been trasnlated to many languages</string>
    <string name="ob_desc6">Generates Arduino code to upload to your board</string>
    <string name="ob_desc7">Documentation available on every instruction with examples (in English)</string>
    <string name="ob_desc8">Some advanced blocks require a license to generate code. Buy it or get it for free at https://roboticafacil.es/en/facilino-license/</string>
</resources>
